<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cprograms.mproject.cprograms.MainActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_suggest"
        android:orderInCategory="100"
        android:title="@string/action_suggest"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/action_report"
        app:showAsAction="never"
        />

</menu>
